tests/miniJava/pos/000751_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( new java ( ) ) java [ 0 ] = 0 ; else System.out.println ( { } ) ; } }
