tests/miniJava/neg/002763_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = System.out.println new int [ 0 ] ; } }
